syntax = "proto3";

package proto;

message ArmorLocator {
  uint32 raw_form_id = 1;
  uint32 local_form_id = 2;
  string mod_name = 3;
}

message Outfit {
  string name = 1;
  bool is_favorite = 3;
  repeated ArmorLocator armors = 8; // A list of formIDs that will be resolved as pointers to RE::TESObjectARMO
  map<uint32, uint32> slot_policies = 6;
  uint32 slot_policy = 7;
  repeated uint32 OBSOLETE_armors = 2; // A list of formIDs that will be resolved as pointers to RE::TESObjectARMO
}

message ActorOutfitAssignment {
  string current_outfit_name = 1;
  map<uint32, string> location_based_outfits = 2;
}

message OutfitSystem {
  bool enabled = 1;
  repeated Outfit outfits = 3;
  bool location_based_auto_switch_enabled = 4;
  map<uint32, ActorOutfitAssignment> actor_outfit_assignments = 7;

  string OBSOLETE_current_outfit_name = 2;
  map<uint32, string> OBSOLETE_location_based_outfits = 5;
  map<uint64, ActorOutfitAssignment> OBSOLETE_actor_outfit_assignments_handle = 6;
}
